--- a/miniDeliverable/purchaseOrder.html
+++ b/miniDeliverable/purchaseOrder.html
@@ -337,8 +337,10 @@
     3. We reserve the right to reject goods that are not in good order or condition as determined by our quality control.
     4. Goods to be delivered within 15 days from date of PO."></textarea>
   </div>
-
+<br><br>
 <!--Sub Total-->
+<div class="form-group">
+    <label for="subTotal">Sub Total:</label>
 <!--Discount-->
 <div class="form-group">
     <label for="discount">Discount:</label>
@@ -352,13 +354,14 @@
     <label for="phone2">Shipping:</label>
     <input type="number" min="0.01" step="0.01" max="2500" placeholder="29.99" id="shipping"/></div>
 <!--Grand Total-->
-<!--Sign above-->
-
+<br><br>
+<center>
 <!--Thank you-->
 <h5>Thank you for choosing us to do your business.</h5>
 <!--Submit button-->
 <button type="submit" id="data" class="btn btn-default">Submit</button>
 </form> 
+</center>
 
 <!--<input type="submit" id="data" onclick="generateQR()">-->
 <div id="qrcode"></div>
