--- a/miniDeliverable/purchaseOrder.html
+++ b/miniDeliverable/purchaseOrder.html
@@ -22,7 +22,13 @@
     }
     .card-title {
         background-color: tomato;
+        background-size: 50px 50px;
         color: #ffffff;
+    }
+
+    .card{
+        height: auto;
+        width: auto;
     }
 </style>
 
@@ -143,7 +149,7 @@
     </div>
     <!--Email-->
     <div class="card p-3">
-        <h4 for="email2">Email address:</label>
+        <label for="email2">Email address:</label>
         <input type="email" class="form-control" id="email2" placeholder="info@chhosp.com">
     </div>
 </div>
