--- a/miniDeliverable/purchaseOrder.html
+++ b/miniDeliverable/purchaseOrder.html
@@ -47,13 +47,12 @@
 </div>
 
 <!--Form for purchase order-->
-
 <!--Purchase Order Number and date-->
 <div class="container-fluid">
     <!--Purchase order-->
     <div class="col-sm-6">
         <h4 class="card-title" for="purchaseNo">Purchase Order Number:</label>
-        <input type="number" class="form-control" id="purchaseNo" placeholder="634">
+        <input type="number" class="form-control" id="purchaseNo" placeholder="634" required>
     </div>
 
     <!--Date-->
@@ -141,8 +140,8 @@
     </div>
     <!--State-->
     <div class="card p-3">
-        <label for="state">State:</label>
-        <input type="text" class="form-control" id="state" placeholder="CT">
+        <label for="state2">State:</label>
+        <input type="text" class="form-control" id="state2" placeholder="CT">
     </div>
     <!--Zip Code-->
     <div class="card p-3">
@@ -211,7 +210,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in VA" id="desc1"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity1"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number1"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total1"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total1"></td>
     </tr>
     <!--row 2-->
     <tr> 
@@ -220,7 +219,7 @@
         <td><input type="text" class="form-control" placeholder="Red onions" id="desc2"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity2"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number2"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total2"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total2"></td>
     </tr>
     <!--row 3-->
     <tr> 
@@ -229,7 +228,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in NC" id="desc3"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity3"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number3"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total3"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total3"></td>
     </tr>
     <!--row 4-->
     <tr> 
@@ -238,7 +237,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in TN" id="desc4"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity4"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number4"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total4"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total4"></td>
     </tr>
     <!--row 5-->
     <tr> 
@@ -247,7 +246,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in VA" id="desc5"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity5"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number5"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total5"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total5"></td>
     </tr>
     <!--row 6-->
     <tr> 
@@ -256,7 +255,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in FL" id="desc6"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity6"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number6"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total6"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total6"></td>
     </tr>
     <!--row 7-->
     <tr> 
@@ -265,7 +264,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in SC" id="desc7"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity7"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number7"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total7"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total7"></td>
     </tr>
     <!--row 8-->
     <tr> 
@@ -274,7 +273,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in NY" id="desc8"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity8"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number8"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total8"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total8"></td>
     </tr>
     <!--row 9-->
     <tr> 
@@ -283,7 +282,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in MN" id="desc9"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity9"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number9"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total9"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total9"></td>
     </tr>
     <!--row 10-->
     <tr> 
@@ -292,97 +291,7 @@
         <td><input type="text" class="form-control" placeholder="Grown in VA" id="desc10"></td>
         <td><input type="number" class="form-control" placeholder="20" id="quantity10"></td>
         <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number10"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total10"></td>
-    </tr>
-    <!--row 11-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="4LUWHN" id="id11"></td>
-        <td><input type="text" class="form-control" placeholder="Eggplants" id="item11"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in NC" id="desc11"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity11"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number11"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total11"></td>
-    </tr>
-    <!--row 12-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="6RR5N1" id="id12"></td>
-        <td><input type="text" class="form-control" placeholder="Strawberries" id="item12"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in NC" id="desc12"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity12"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number12"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total12"></td>
-    </tr>
-    <!--row 13-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="81JHJW" id="id13"></td>
-        <td><input type="text" class="form-control" placeholder="Bell Peppers" id="item13"></td>
-        <td><input type="text" class="form-control" placeholder="Red Bell Peppers" id="desc13"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity13"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number13"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total13"></td>
-    </tr>
-    <!--row 14-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="5XY4D8" id="id14"></td>
-        <td><input type="text" class="form-control" placeholder="Broccoli" id="item14"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in NC" id="desc14"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity14"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number14"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total14"></td>
-    </tr>
-    <!--row 15-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="1KHP5E" id="id15"></td>
-        <td><input type="text" class="form-control" placeholder="Corn" id="item15"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in IN" id="desc15"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity15"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number15"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total15"></td>
-    </tr>
-    <!--row 16-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="F2RM2C" id="id16"></td>
-        <td><input type="text" class="form-control" placeholder="Watermelon" id="item16"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in FL" id="desc16"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity16"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number16"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total16"></td>
-    </tr>
-    <!--row 17-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="Z72IX5" id="id17"></td>
-        <td><input type="text" class="form-control" placeholder="Avocado" id="item17"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in CA" id="desc17"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity17"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number17"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total17"></td>
-    </tr>
-    <!--row 18-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="80H9DO" id="id18"></td>
-        <td><input type="text" class="form-control" placeholder="Oranges" id="item18"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in FL" id="desc18"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity18"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number18"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total18"></td>
-    </tr>
-    <!--row 19-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="QZ0K4V" id="id19"></td>
-        <td><input type="text" class="form-control" placeholder="Apples" id="item19"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in NY" id="desc19"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity19"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number19"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total19"></td>
-    </tr>
-    <!--row 20-->
-    <tr> 
-        <td><input type="text" class="form-control" placeholder="RJKG6R" id="id20"></td>
-        <td><input type="text" class="form-control" placeholder="Blueberries" id="item20"></td>
-        <td><input type="text" class="form-control" placeholder="Grown in VA" id="desc20"></td>
-        <td><input type="number" class="form-control" placeholder="20" id="quantity20"></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="7.58" id="number20"/></td>
-        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" name="subTotal" id="total20"></td>
+        <td><input type="number" min="0.01" step="0.01" max="2500" placeholder="151.60" id="total10"></td>
     </tr>
 </table>
 </div>
@@ -411,11 +320,13 @@
     <h4 class="card-title">Total</h4>
 <!--Sub Total-->
 <div class="card">
-    <label for="subTotal" id="subTot">Sub Total:</label></div>
+    <label for="subTotal" id="subTot">Sub Total:</label>
+    <input type="number" min="0.01" step="0.01" max="2500" placeholder="150.00" id="sTotal"/></div>
+</div>
 <!--Discount-->
 <div class="card">
     <label for="discount">Discount:</label>
-    <input type="number" min="0.01" step="0.01" max="2500" placeholder="150.00" id="discount"/></div>
+    <input type="number" min="0.01" step="0.01" max="2500" placeholder="25.00" id="discount"/></div>
 <!--Sales Tax %-->
 <div class="card">
     <label for="tax">Sales Tax%:</label>
@@ -426,31 +337,27 @@
     <input type="number" min="0.01" step="0.01" max="2500" placeholder="29.99" id="shipping"/></div>
 <!--Grand Total-->
 <div class="card">
-    <label for="grandTotal" id="grandTot">Grand Total:</label></div>
+    <label for="grandTotal" id="grandTot">Grand Total:</label>
+    <input type="number" min="0.01" step="0.01" max="2500" placeholder="163.74" id="gTotal"/></div>
+</div>
 
 </div>
 </div>
 <br><br>
 <div class="container-fluid">
-    <center>
+<center>
 <!--Thank you-->
 <h3>Thank you for choosing us to do your business.</h3>
 <br>
 <!--Submit button-->
 <div class="btn-group btn-group-lg">
-    <button type="submit" id="data" onclick="generateQR()" class="btn btn-large">Submit Information</button>
-    <button type="submit" id="save" class="btn btn-large">Save Information</button>
+    <button type="submit" id="data" onclick="submitInfo()" class="btn btn-large">Submit Information</button>
 </div>
 </center>
 </div>
-
-
-<!--<input type="submit" id="data" onclick="generateQR()">-->
-<div id="qrcode"></div>
 </body>
 
 <!--Script tags-->
-<script src="qrcode.min.js"></script>
 <script src="purchaseOrder.js"></script>
 
 </html>
